# polar-embedded-sdk

./: .build.yml  .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  pyproject.toml
.githooks/: README.md  _btstack_alignment_hook.sh  post-checkout  post-merge  pre-commit  pre-push
.github/: README.md  pull_request_template.md
docs/: CONVENTIONS.md  GLOSSARY.md  KNOWN_ISSUES.md  README.md  SUMMARY.md  book.toml  sdk_overview.md
docs/c_sdk/: README.md  architecture.md  cookbook.md  helper_modules.md  public_api.md
docs/howto/: README.md  btstack_change_checklist.md  btstack_debug_flags.md  btstack_version_alignment.md  build_micropython_with_polar_module.md  build_pico_sdk_probe.md  micropython_btstack_config.md  mpy_psftp_probe_air_capture_comparison.md  nanopb_generation.md  package_acceptance.md  pico2w_ble_stability.md  rp2_1_prototype.md  rp2_2_prototype.md  toolchain_requirements.md  validation.md  verity_sense_validation.md
docs/micropython/: README.md  api_reference.md  data_formats.md  quickstart.md  research_workflows.md
docs/reference/: README.md  ble_heart_rate_measurement.md  btstack_api_surface.md  btstack_protocol_mapping.md  btstack_status_triage.md  polar_h10_gatt.md  polar_pmd.md  polar_proto_sources.md  polar_psftp.md
docs/specs/: README.md  logger_data_contract_v1.md  logger_firmware_v1.md  logger_host_interfaces_v1.md  logger_recovery_architecture_v1.md  logger_runtime_architecture_v1.md  logger_update_architecture.md  micropython_btstack_global_fix.md  micropython_polar_sdk_driver.md  polar_sdk_api_design.md
examples/micropython/: README.md  acc_read_demo.py  capabilities_demo.py  ecg_hex_capture.py  ecg_hr_lcd_gfx_demo.py  ecg_read_demo.py  hello_driver.py  hello_polar.py  hr_csv_capture.py  hr_passive_stats.py  hr_read_demo.py  hr_stability_short.py  psftp_chunked_download_demo.py  psftp_download_demo.py  psftp_list_demo.py  recording_hr_demo.py  scan_polar.py  smoke_test.py  stream_probe.py
examples/pico_sdk/: CMakeLists.txt  README.md  btstack_config.h  main.c
examples/pico_sdk_psftp/: CMakeLists.txt  README.md  btstack_config.h  main.c
firmware/cmake/: pimoroni_minimal.cmake  pimoroni_mp_compat.h  pimoroni_rtc_minimal.cmake
logger_firmware/: CMakeLists.txt  README.md  btstack_config.h  logger_mbedtls_config.h  lwipopts.h
logger_firmware/boards/rp2_2/: board_config.h
logger_firmware/include/logger/: app_main.h  app_state.h  battery.h  busy_poll.h  button.h  capture_pipe.h  capture_stats.h  chunk_builder.h  civil_date.h  clock.h  config_store.h  config_validate.h  faults.h  flash_layout.h  flash_safety.h  h10.h  identity.h  ipc_atomic.h  journal.h  journal_writer.h  json.h  json_stream_writer.h  json_writer.h  net.h  ntp_time.h  psram.h  psram_layout.h  queue.h  reset_marker.h  service_cli.h  session.h  sha256.h  storage.h  storage_service.h  storage_worker.h  system_log.h  system_log_backend.h  system_log_backend_psram.h  upload.h  upload_bundle.h  (+4 more)
logger_firmware/ld/: memmap_sram_locked.ld
logger_firmware/src/: app_main.c  app_state.c  battery.c  btstack_aes128_mbedtls.c  button.c  capture_pipe.c  capture_stats.c  chunk_builder.c  clock.c  clock_local.c  config_store.c  config_validate.c  fatfs_guard.c  faults.c  flash_safety.c  h10.c  identity.c  journal.c  journal_writer.c  json.c  json_stream_writer.c  json_writer.c  main.c  mbedtls_platform.c  net.c  psram.c  queue.c  reset_marker.c  service_cli.c  session.c  session_manifest.c  sha256.c  storage.c  storage_service.c  storage_worker.c  system_log.c  system_log_backend_psram.c  upload.c  upload_bundle.c  upload_tls_roots.h  (+1 more)
logger_firmware/tests/: test_capture_pipe.c  test_chunk_builder.c  test_clock_local.c  test_config_upload_material_validation.py  test_journal_writer.c  test_session_recovery_identity.c  test_upload_busy_cli_pump.py  test_upload_inflight_lifecycle.py  test_upload_request_headers.py  verify_civil_date.c
logger_firmware/tests/shim/: ff.h
logger_firmware/tests/shim/hardware/: flash.h  sync.h  watchdog.h
logger_firmware/tests/shim/pico/: stdlib.h
logger_firmware/tls/: public_roots_v1.pem  public_roots_v1.txt
patches/: align_btstack_trees.sh  apply_micropython_patches.sh  apply_pico_sdk_patches.sh  apply_tinyusb_patches.sh  check_btstack_alignment.sh
patches/micropython/: 0001-extmod-bluetooth-add-dedicated-disconnect-reason-IRQ.patch  0002-extmod-btstack-preserve-disconnect-addr-fields-and-e.patch  0003-extmod-btstack-tune-central-connect-latency-and-supe.patch  0004-extmod-btstack-central-post-connect-HCI-param-update.patch  0005-extmod-btstack-include-hci-event-sources-for-newer-btstack.patch  0006-ports-rp2-btstack-run-all-pending-run-loop-work.patch  0007-ports-rp2-reset-hci-scheduler-state-across-soft-reset.patch  0008-ports-rp2-power-cycle-cyw43-on-soft-reset.patch  0009-extmod-btstack-enable-tlv-backed-bond-storage-on-rp2-cyw43.patch  0010-extmod-btstack-add-embedded-platform-includes-for-tlv.patch  0011-extmod-btstack-expose-link-security-debug-snapshot.patch  0012-ports-rp2-reserve-top-flash-for-btstack-tlv-bank.patch  0013-ports-rp2-override-pico-flash-safety-for-dormant-core1.patch  0014-extmod-btstack-remove-link-security-debug-snapshot.patch  README.md
patches/pico-sdk/: 0001-rp2-common-pico-btstack-rename-hids-client-to-hids-host.patch  (+2 more)
polar_ble/: README.md
polar_sdk/: README.md
polar_sdk/core/tests/: CMakeLists.txt  test_btstack_security.c  test_pmd_start.c
polar_sdk/core/tests/fakes/: btstack.h  btstack_config.h
scripts/: btstack_change_checklist.sh  check_btstack_license_headers.py  check_c.sh  check_c_strict_warnings.py  check_fast.sh  check_full.sh  check_logger_firmware_c.sh  check_python.sh  check_vendor_patches.sh  diff_btstack_config.py  logger_artifact_validate.py  logger_flash_persistence_smoke.py  logger_journal_validate.py  logger_repair_upload_bundle.py  logger_serial_json.py  logger_synth_end_to_end.py  logger_system_log_validate.py  logger_tls.py  logger_tls_codegen.py  logger_upload_ref_server.py  logger_usb.py  loggerctl.py  setup_hooks.sh
(+169 files in other folders)
